--- a/website.html
+++ b/website.html
@@ -21,12 +21,18 @@
 
     <div class="header-1">
       <div class="left-1">
-        <a href="https://www.india.gov.in/topics">
-        <img class="facebook" src="facebook.png">
+        <a href="https://www.facebook.com/ayush.borhade?mibextid=ZbWKwL">
+          <img class="facebook" src="facebook.png">
         </a>
-        <img class="twitter" src="twitter.png">
-        <img class="instagram" src="instagram-png-logo-11545512103yiiajkgr2i.png">
-        <img class="linkedin" src="linkedin-logo-linkedin-icon-transparent-free-png.webp">
+        <a href="https://x.com/x_alpha_exd?t=wfkX0zl-SSagxd1u3qgzrw&s=08 ">
+          <img class="twitter" src="twitter.png">
+        </a>
+        <a href="https://www.instagram.com/x_.alpha_x?igsh=eGZtY3NqZXR1MTV3">
+          <img class="instagram" src="instagram-png-logo-11545512103yiiajkgr2i.png">
+        </a>
+        <a href="https://www.linkedin.com/in/ayush-borhade-831231245?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">
+          <img class="linkedin" src="linkedin-logo-linkedin-icon-transparent-free-png.webp">
+        </a>
       </div>
       <div class="right-1">
         <div class="upload-icon-con-1">
