--- a/website.html
+++ b/website.html
@@ -35,26 +35,34 @@
         </a>
       </div>
       <div class="right-1">
-        <div class="upload-icon-con-1">
+        <a href="https://has-tar.github.io/GovSchGen/website">
+          <div class="upload-icon-con-1">
           <button class="button-main-content">
             Skip to main content
           </button>
         </div>
-        <div class="apps-icon-con-1">
+        </a>
+        <a href="">
+          <div class="apps-icon-con-1">
           <button class="button-sign-in">
             Sign In
           </button>          
         </div>
-        <div class="noti-icon-con-1">
+        </a>
+        <a href="https://has-tar.github.io/GovSchGen/website">
+          <div class="noti-icon-con-1">
           <button class="button-register">
             Register
           </button>          
         </div>
-        <div class="channel-icon-con-1">
+        </a>
+        <a href="">
+          <div class="channel-icon-con-1">
           <button class="button-hindi">
             हिंदी
           </button>
         </div>
+        </a>
       </div>
     </div>
 
@@ -67,36 +75,46 @@
         <img class="menu" src="logo_1.png">
       </div>
       <div class="right">
-        <div class="nav1">
+        <a href="https://www.india.gov.in/topics">
+          <div class="nav1">
           <button class="button-nav1">
             <img class="img-nav1" src="nav1.png">
           </button>
           <div class="tooltip">TOPICS</div>
         </div>
-        <div class="nav2">
+        </a>
+        <a href="https://services.india.gov.in/">
+           <div class="nav2">
           <button class="button-nav2">
             <img class="img-nav2" src="nav2.png">
           </button>
           <div class="tooltip">SERVICES</div>
         </div>
-        <div class="nav3">
+        </a>
+        <a href="https://www.india.gov.in/my-government">
+           <div class="nav3">
           <button class="button-nav3">
             <img class="img-nav3" src="nav3.png"> 
           </button>
           <div class="tooltip">MY GOVERNMENT</div>
         </div>
-        <div class="nav4">
+        </a>
+        <a href="https://www.india.gov.in/people-groups">
+           <div class="nav4">
           <button class="button-nav4">
             <img class="img-nav4" src="nav4.png">                       
           </button>
           <div class="tooltip">PEOPLE GROUPS</div>
         </div>
-        <div class="nav4">
+        </a>
+        <a href="https://www.india.gov.in/india-glance">
+          <div class="nav4">
           <button class="button-nav5">
             <img class="img-nav5" src="nav5.png">           
           </button>
           <div class="tooltip">INDIA AT A GLANCE</div>
         </div>
+        </a>
       </div>
     </div>
 
