--- a/website.html
+++ b/website.html
@@ -71,9 +71,11 @@
 
 
     <div class="header">
-      <div class="left">
+      <a href="https://www.india.gov.in/">
+       <div class="left">
         <img class="menu" src="logo_1.png">
-      </div>
+      </div> 
+      </a>
       <div class="right">
         <a href="https://www.india.gov.in/topics">
           <div class="nav1">
