--- a/website.html
+++ b/website.html
@@ -125,7 +125,9 @@
 
     <div class="sidebar">
       <div class="sidebar-link">
+        <a href="https://has-tar.github.io/Farmer/website">
         <div>Farmers</div>
+        </a>
       </div>
       <div class="sidebar-link">
         <div>Wage Labour</div>
