--- a/website.html
+++ b/website.html
@@ -42,10 +42,10 @@
           </button>
         </div>
         </a>
-        <a href="https://has-tar.github.io/LoginPage/main">
+        <a href="">
           <div class="apps-icon-con-1">
           <button class="button-sign-in">
-            Sign In
+            Sign Out
           </button>          
         </div>
         </a>
