--- a/website.html
+++ b/website.html
@@ -42,10 +42,10 @@
           </button>
         </div>
         </a>
-        <a href="">
+        <a href="https://has-tar.github.io/LoginPage/main">
           <div class="apps-icon-con-1">
           <button class="button-sign-in">
-            Sign Out
+            Sign In
           </button>          
         </div>
         </a>
@@ -125,7 +125,7 @@
 
     <div class="sidebar">
       <div class="sidebar-link">
-        <a href="https://has-tar.github.io/Farmer/website">
+        <a href="https://has-tar.github.io/LoginPage/main">
         <div>Farmers</div>
         </a>
       </div>
