--- a/website.html
+++ b/website.html
@@ -35,21 +35,21 @@
         </a>
       </div>
       <div class="right-1">
-        <a href="https://has-tar.github.io/GovSchGen/website">
+        <a href="">
           <div class="upload-icon-con-1">
           <button class="button-main-content">
             Skip to main content
           </button>
         </div>
         </a>
-        <a href="https://has-tar.github.io/LoginPage/main">
+        <a href="http://127.0.0.1:8000/login">
           <div class="apps-icon-con-1">
           <button class="button-sign-in">
             Sign In
           </button>          
         </div>
         </a>
-        <a href="https://has-tar.github.io/GovSchGen/website">
+        <a href="http://127.0.0.1:8000">
           <div class="noti-icon-con-1">
           <button class="button-register">
             Register
