--- a/website.html
+++ b/website.html
@@ -42,14 +42,14 @@
           </button>
         </div>
         </a>
-        <a href="https://has-tar.github.io/LoginPage/main">
+        <a href="https://has-tar.github.io/Login/login">
           <div class="apps-icon-con-1">
           <button class="button-sign-in">
             Sign In
           </button>          
         </div>
         </a>
-        <a href="https://has-tar.github.io/LoginPage/main">
+        <a href="https://has-tar.github.io/Signup/signup">
           <div class="noti-icon-con-1">
           <button class="button-register">
             Register
